--- a/_sass/_lyrics.scss
+++ b/_sass/_lyrics.scss
@@ -3,6 +3,34 @@
   margin: 2rem auto;
   padding: 0 1rem;
 
+  .lyrics-listing-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    margin-bottom: 2.5rem;
+    flex-wrap: wrap;
+
+    h1 {
+      margin: 0;
+      color: var(--top-yellow);
+      font-size: 2.2em;
+      text-transform: uppercase;
+    }
+  }
+
+  .vinyl-decoration {
+    width: 80px;
+    height: 80px;
+    
+    img {
+      width: 100%;
+      height: 100%;
+      animation: spin 6s linear infinite;
+      border-radius: 50%;
+    }
+  }
+
   .album-section {
     margin-bottom: 2em;
     padding: 1.5em;
@@ -95,6 +123,7 @@
     padding: 1.5rem;
     border-radius: 4px;
     border: 1px solid var(--top-bg-light);
+    text-align: center;
   }
   .back-link {
     display: inline-block;
@@ -110,6 +139,15 @@
       background-color: darken($top-yellow, 10%);
       color: var(--top-bg-dark);
     }
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 
